2013-5-24:
  * Added experimental methods for level 2 distributed R-like BLAS.

2013-5-9:
  * Fixed initialization bug in pdgemr2d.

pbdBASE 0.2-1 (2013-3-25) --------------------------------------------------

2013-3-20:
  * Added PDSYEV wrappers.

pbdBASE 0.2-0 (2013-3-12) --------------------------------------------------

2013-3-12:
  * Final touches for CRAN.

2013-02-26:
  * Created better separation between pbdBASE and pbdDMAT packages

2013-02-05:
  * Completely redid the internals.  Much less stupid/wasteful now.

2013-01-29:
  * Expose BLACS C extension; BLACS pointers now exportable.
  * Added pdsyrk wrappers.
  * Modified pdgemm wrappers.

2013-01-04:
  * Added new matrix norm and condition number routines.
  * Fix .Last.lib problem.

2012-12-17:
  * Fixed bug in SEXP wrappers of ScaLAPACK functions; passing 0-byte Ralloc'd vectors.
  * Fix multi-arch problem.
  * Add copyright to vignette.

pbdBASE 0.1-1 (2012-12-1) ----------------------------------------------------

2012-11-30:
  * Created .pbdBASEEnv environment.
  * Changed functions to write to new env rather than .GlobalEnv.
  * Finished cleaning up lm.fit.
  * Made PBLAS/ScaLAPACK wrappers less stupid.

2012-11-21:
  * Fixed many problems with qr wrappers.

2012-11-01:
  * Fixed some nasty redistribution bugs.

2012-10-30:
  * Made lm.fit-related foreign language wrappers more efficient.

2012-10-26:
  * Significantly cleaned up all foreign language wrappers.

2012-10-23:
  * Cleaned up wrappers for singular value decomposition.

2012-10-22:
  * Distributed QR added.
  * Distributed linear least squares solver added for n>p case.

======================= Log Before Release =====================================
2012-10-02:
  * Prepare for the first submission.

2012-09-18:
  * Changed high order (re)distribution methods functionality.
  * Added demos.
  * Modify "PDLAPRNT" function.

2012-09-12:
  * Added insertion methods.

2012-09-11:
  * Remembered to do this.