@@ -36,3 +36,10 @@ We also thank Brian D. Ripley, Kurt Hornik, Uwe Ligges, and Simon Urbanek
 from the \proglang{R} Core Team for discussing package release issues and
 helping us solve portability problems on different platforms.
 \\
+
+\section*{Disclaimer}
+
+The findings and conclusions in this article have been formally disseminated
+neither by the U.S. Department of Energy, nor by the University of Tennessee,
+and as such should not be construed to represent any determination or policy of
+any University, Agency, and/or National Laboratory.
